welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:26: error: Boolean does not take parameters
else (litMessage== "X") {
                        ^